do not use proxy

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -254,7 +254,8 @@
         "#     sp = setProxy()\n",
         "#     proxy = sp['proxy']\n",
         "#     region = sp['region']\n",
-        "doProxy()"
+        "\n",
+        "# doProxy()"
       ]
     },
     {
@@ -807,12 +808,8 @@
       },
       "outputs": [],
       "source": [
-        "from func.extensionsInstaller import install,update\n",
-        "\n",
         "extURL='https://github.com/dtlnor/stable-diffusion-webui-localization-zh_CN'\n",
-        "extFileSize=171055\n",
-        "\n",
-        "install(extURL,extFileSize)"
+        "shallow_clone_ext_repo(extURL)"
       ]
     },
     {
@@ -832,12 +829,8 @@
       },
       "outputs": [],
       "source": [
-        "from func.extensionsInstaller import install\n",
-        "\n",
         "extURL='https://github.com/AlUlkesh/stable-diffusion-webui-images-browser'\n",
-        "extFileSize=82945\n",
-        "\n",
-        "install(extURL,extFileSize)"
+        "shallow_clone_ext_repo(extURL)"
       ]
     },
     {
@@ -855,12 +848,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from func.extensionsInstaller import install\n",
-        "\n",
         "extURL='https://github.com/AlUlkesh/sd_save_intermediate_images'\n",
-        "extFileSize=0\n",
-        "\n",
-        "install(extURL,extFileSize)"
+        "shallow_clone_ext_repo(extURL)"
       ]
     },
     {
@@ -878,12 +867,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from func.extensionsInstaller import install\n",
-        "\n",
         "extURL='https://github.com/fkunn1326/openpose-editor'\n",
-        "extFileSize=0\n",
-        "\n",
-        "install(extURL,extFileSize)"
+        "shallow_clone_ext_repo(extURL)"
       ]
     },
     {
@@ -901,12 +886,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from func.extensionsInstaller import install\n",
-        "\n",
         "extURL='https://github.com/pharmapsychotic/clip-interrogator-ext'\n",
-        "extFileSize=0\n",
-        "\n",
-        "install(extURL,extFileSize)"
+        "shallow_clone_ext_repo(extURL)"
       ]
     },
     {
@@ -924,12 +905,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "from func.extensionsInstaller import install\n",
-        "\n",
         "extURL='https://github.com/kohya-ss/sd-webui-additional-networks'\n",
-        "extFileSize=0\n",
-        "\n",
-        "install(extURL,extFileSize)"
+        "shallow_clone_ext_repo(extURL)"
       ]
     },
     {
@@ -949,12 +926,8 @@
       },
       "outputs": [],
       "source": [
-        "from func.extensionsInstaller import install\n",
-        "\n",
         "extURL='https://github.com/Mikubill/sd-webui-controlnet'\n",
-        "extFileSize=0\n",
-        "\n",
-        "install(extURL,extFileSize)\n",
+        "shallow_clone_ext_repo(extURL)\n",
         "\n",
         "# \u5728\u4f7f\u7528segmentation\u8fd9\u4e2apreprocessor\u7684\u65f6\u5019\u9700\u8981\uff0c\u4f1a\u9047\u5230\u62a5\u9519\uff0c\u901a\u8fc7\u4ee5\u4e0b\u65b9\u6cd5\u8fdb\u884c\u4fee\u590d\uff1a\n",
         "# https://github.com/lllyasviel/ControlNet/issues/61#issuecomment-1434005703\n",
@@ -2026,7 +1999,7 @@
         "    \n",
         "args = base_args[:]\n",
         "\n",
-        "args += [\n",
+        "args = [\n",
         "    f'cd {webUIDir}','&&',\n",
         "    # 'pip install \"opencv-python-headless<4.3\" ','&&',\n",
         "    'python launch.py',\n",
@@ -2040,16 +2013,16 @@
         "    # '--no-half'\n",
         "       ]\n",
         "\n",
-        "try:\n",
-        "    proxy\n",
-        "except NameError:\n",
-        "    print(\"\u4e0d\u5b58\u5728proxy\")\n",
-        "else:\n",
-        "    if region=='\u672a\u77e5':\n",
-        "        print(\"\u4e0d\u5b58\u5728proxy\")\n",
-        "    else:\n",
-        "        print(f\"\u5df2\u7ecf\u6302\u8f7d\u3010{region}\u3011proxy\")\n",
-        "        args.insert(0,f\"{proxy} && env|grep -i proxy &&\")\n",
+        "# try:\n",
+        "#     proxy\n",
+        "# except NameError:\n",
+        "#     print(\"\u4e0d\u5b58\u5728proxy\")\n",
+        "# else:\n",
+        "#     if region=='\u672a\u77e5':\n",
+        "#         print(\"\u4e0d\u5b58\u5728proxy\")\n",
+        "#     else:\n",
+        "#         print(f\"\u5df2\u7ecf\u6302\u8f7d\u3010{region}\u3011proxy\")\n",
+        "#         args.insert(0,f\"{proxy} && env|grep -i proxy &&\")\n",
         "\n",
         "if(canUseXformers==True):\n",
         "    print(\"\u53ef\u4ee5\u4f7f\u7528Xformers\")\n",
@@ -2067,14 +2040,6 @@
         "\n",
         "!$cmd"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "3a2c9401-b993-46fe-8333-6a4d9e1d7ee2",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
