--- a/nbfunc/installer.ipynb
+++ b/nbfunc/installer.ipynb
@@ -59,7 +59,29 @@
         "        !pip install $repo_path\n",
         "        print(f\"Repository {url} installed to {repo_path}\")\n",
         "    except Exception as e:\n",
-        "        print(e)"
+        "        print(e)\n",
+        "        \n",
+        "import shutil\n",
+        "\n",
+        "def clone_ext_repo(url, force=False):\n",
+        "    ext_dir=getExtDir()\n",
+        "    if force or not os.path.exists(ext_dir):\n",
+        "        if os.path.exists(ext_dir):\n",
+        "            print(\"Directory already exists, removing it\")\n",
+        "            shutil.rmtree(ext_dir)\n",
+        "        clone_repo(url, ext_dir)\n",
+        "    else:\n",
+        "        print(\"Directory already exists, skipping cloning\")\n",
+        "    \n",
+        "def shallow_clone_ext_repo(url, force=False):\n",
+        "    ext_dir=getExtDir()\n",
+        "    if force or not os.path.exists(ext_dir):\n",
+        "        if os.path.exists(ext_dir):\n",
+        "            print(\"Directory already exists, removing it\")\n",
+        "            shutil.rmtree(ext_dir)\n",
+        "        shallow_clone_repo(url, ext_dir)\n",
+        "    else:\n",
+        "        print(\"Directory already exists, skipping cloning\")\n"
       ]
     },
     {
@@ -136,7 +158,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.13"
+      "version": "3.8.15"
     }
   },
   "nbformat": 4,
