--- a/nbfunc/getDir.ipynb
+++ b/nbfunc/getDir.ipynb
@@ -9,9 +9,10 @@
       "source": [
         "def getExtDir():\n",
         "    global webUIDir, extDir\n",
-        "    if not webUIDir:\n",
+        "    try:\n",
+        "        webUIDir,extDir\n",
+        "    except:\n",
         "        webUIDir = find_file('/', 'stable-diffusion-webui')\n",
-        "    if not extDir:\n",
         "        extDir = find_file(webUIDir, 'extensions')\n",
         "    return extDir"
       ]
