--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -126,7 +126,7 @@
         "        \n",
         "repo_root_dir=find_repo_root()\n",
         "sys.path.append(repo_root_dir)\n",
-        "print(repo_root_dir)\n",
+        "# print(repo_root_dir)\n",
         "# \u83b7\u53d6repo\u6240\u5728\u7684\u6839\u76ee\u5f55\n",
         "root_dir = os.path.dirname(repo_root_dir)\n",
         "# \u83b7\u53d6\u5f53\u524d\u73af\u5883\u540d\u79f0\u4e0e\u5f53\u524d\u73af\u5883content\u8def\u5f84\n",
@@ -135,8 +135,8 @@
         "env_name = env_cb['env_name']\n",
         "content_path = env_cb['content_path']\n",
         "\n",
-        "%cd $repo_root_dir\n",
         "# \u88c5\u8f7dnbfunc\u4e2d\u7684hub\u6d89\u53ca\u7684\u6240\u6709ipynb\u51fd\u6570\n",
+        "%cd $repo_root_dir\n",
         "%run ./nbfunc/hub.ipynb\n",
         "\n",
         "initGit()"
