--- a/nbfunc/installer.ipynb
+++ b/nbfunc/installer.ipynb
@@ -63,25 +63,106 @@
         "        \n",
         "import shutil\n",
         "\n",
-        "def clone_ext_repo(url, force=False):\n",
-        "    ext_dir=getExtDir()\n",
-        "    if force or not os.path.exists(ext_dir):\n",
-        "        if os.path.exists(ext_dir):\n",
-        "            print(\"Directory already exists, removing it\")\n",
-        "            shutil.rmtree(ext_dir)\n",
+        "def clone_ext_repo(url, reinstall=False):\n",
+        "    \"\"\"\n",
+        "    \u514b\u9686\u5916\u90e8Git\u4ee3\u7801\u5e93\u5230\u672c\u5730\uff0c\u5982\u679c\u4ee3\u7801\u5e93\u5df2\u7ecf\u5b58\u5728\uff0c\u5219\u6839\u636ereinstall\u53c2\u6570\u7684\u503c\u51b3\u5b9a\u662f\u5426\u91cd\u65b0\u514b\u9686\uff0c\u6216\u4f7f\u7528git pull\u66f4\u65b0\u4ee3\u7801\u3002\n",
+        "\n",
+        "    \u53c2\u6570\uff1a\n",
+        "    url -- Git\u4ed3\u5e93\u7684URL\n",
+        "    reinstall -- \u5982\u679c\u4e3aTrue\uff0c\u8868\u793a\u9700\u8981\u91cd\u65b0\u514b\u9686\u4ee3\u7801\u5e93\u3002\u9ed8\u8ba4\u4e3aFalse\u3002\n",
+        "\n",
+        "    \u8fd4\u56de\uff1a\n",
+        "    \u65e0\u8fd4\u56de\u503c\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # \u83b7\u53d6\u7528\u4e8e\u5b58\u50a8\u514b\u9686\u4ee3\u7801\u7684\u76ee\u5f55ext_dir\uff08\u901a\u8fc7\u8c03\u7528getExtDir()\u51fd\u6570\u5b9e\u73b0\uff09\u3002\n",
+        "    ext_dir = getExtDir()\n",
+        "\n",
+        "    # \u4eceGit\u4ed3\u5e93\u7684URL\u4e2d\u63d0\u53d6\u51fa\u4ee3\u7801\u5e93\u7684\u540d\u79f0repo_name\uff0c\u5e76\u4ece\u4e2d\u79fb\u9664.git\u540e\u7f00\u3002\n",
+        "    repo_name = url.split(\"/\")[-1].replace(\".git\", \"\")\n",
+        "\n",
+        "    # \u6784\u5efa\u4ee3\u7801\u5e93\u5728\u672c\u5730\u7684\u8def\u5f84repo_path\uff0c\u8be5\u8def\u5f84\u4e3aext_dir\u4e0erepo_name\u7684\u7ec4\u5408\u3002\n",
+        "    repo_path = os.path.join(ext_dir, repo_name)\n",
+        "\n",
+        "    # \u5982\u679crepo_path\u6240\u4ee3\u8868\u7684\u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u5219\u6267\u884c\u4ee5\u4e0b\u64cd\u4f5c\uff1a\n",
+        "    if not os.path.exists(repo_path):\n",
+        "\n",
+        "        # \u5982\u679creinstall\u53c2\u6570\u7684\u503c\u4e3aTrue\u6216repo_path\u6240\u4ee3\u8868\u7684\u76ee\u5f55\u5b58\u5728\uff0c\u5219\u5220\u9664\u8be5\u76ee\u5f55\uff08\u4f7f\u7528shutil.rmtree\u51fd\u6570\u5b9e\u73b0\uff09\u3002\n",
+        "        if reinstall or os.path.exists(repo_path):\n",
+        "            print(\"\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u6b63\u5728\u5220\u9664\u5b83...\")\n",
+        "            shutil.rmtree(repo_path)\n",
+        "\n",
+        "        # \u8c03\u7528clone_repo\u51fd\u6570\u6765\u5c06Git\u4ed3\u5e93\u514b\u9686\u5230\u672c\u5730\uff08\u8be5\u51fd\u6570\u7684\u5b9e\u73b0\u4e0d\u5728\u8be5\u4ee3\u7801\u6bb5\u4e2d\uff09\u3002\n",
         "        clone_repo(url, ext_dir)\n",
+        "\n",
+        "    # \u5982\u679crepo_path\u6240\u4ee3\u8868\u7684\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5219\u6839\u636ereinstall\u53c2\u6570\u7684\u503c\u51b3\u5b9a\u662f\u5426\u91cd\u65b0\u514b\u9686\u4ee3\u7801\u5e93\uff0c\u6216\u4f7f\u7528git pull\u66f4\u65b0\u4ee3\u7801\u3002\n",
         "    else:\n",
-        "        print(\"Directory already exists, skipping cloning\")\n",
+        "        if reinstall:\n",
+        "            print(\"\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u6b63\u5728\u91cd\u65b0\u514b\u9686...\")\n",
+        "            shutil.rmtree(repo_path)\n",
+        "            clone_repo(url, ext_dir)\n",
+        "        else:\n",
+        "            print(\"\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5c1d\u8bd5\u4f7f\u7528git pull\u66f4\u65b0\u4ee3\u7801...\")\n",
+        "            try:\n",
+        "                # \u8fdb\u5165\u4ee3\u7801\u5e93\u76ee\u5f55\u5e76\u6267\u884cgit pull\u547d\u4ee4\n",
+        "                os.chdir(repo_path)\n",
+        "                subprocess.check_output(['git', 'pull'])\n",
+        "                print(\"\u4ee3\u7801\u66f4\u65b0\u6210\u529f\u3002\")\n",
+        "            except subprocess.CalledProcessError as e:\n",
+        "                # \u5982\u679cgit pull\u5931\u8d25\uff0c\u5219\u8f93\u51fa\u9519\u8bef\u4fe1\u606f\n",
+        "                print(\"\u4ee3\u7801\u66f4\u65b0\u5931\u8d25\uff0c\u9519\u8bef\u4fe1\u606f\u5982\u4e0b\uff1a\")\n",
+        "                print(e.output.decode(\"utf-8\"))\n",
+        "\n",
         "    \n",
-        "def shallow_clone_ext_repo(url, force=False):\n",
-        "    ext_dir=getExtDir()\n",
-        "    if force or not os.path.exists(ext_dir):\n",
-        "        if os.path.exists(ext_dir):\n",
-        "            print(\"Directory already exists, removing it\")\n",
-        "            shutil.rmtree(ext_dir)\n",
+        "def shallow_clone_ext_repo(url, reinstall=False):\n",
+        "    \"\"\"\n",
+        "    \u514b\u9686\u5916\u90e8Git\u4ee3\u7801\u5e93\u5230\u672c\u5730\uff0c\u5982\u679c\u4ee3\u7801\u5e93\u5df2\u7ecf\u5b58\u5728\uff0c\u5219\u6839\u636ereinstall\u53c2\u6570\u7684\u503c\u51b3\u5b9a\u662f\u5426\u91cd\u65b0\u5b89\u88c5\uff0c\u6216\u4f7f\u7528git pull\u66f4\u65b0\u4ee3\u7801\u3002\n",
+        "\n",
+        "    \u53c2\u6570\uff1a\n",
+        "    url -- Git\u4ed3\u5e93\u7684URL\n",
+        "    reinstall -- \u5982\u679c\u4e3aTrue\uff0c\u8868\u793a\u9700\u8981\u91cd\u65b0\u5b89\u88c5\u4ee3\u7801\u5e93\u3002\u9ed8\u8ba4\u4e3aFalse\u3002\n",
+        "\n",
+        "    \u8fd4\u56de\uff1a\n",
+        "    \u65e0\u8fd4\u56de\u503c\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # \u83b7\u53d6\u7528\u4e8e\u5b58\u50a8\u514b\u9686\u4ee3\u7801\u7684\u76ee\u5f55ext_dir\uff08\u901a\u8fc7\u8c03\u7528getExtDir()\u51fd\u6570\u5b9e\u73b0\uff09\u3002\n",
+        "    ext_dir = getExtDir()\n",
+        "\n",
+        "    # \u4eceGit\u4ed3\u5e93\u7684URL\u4e2d\u63d0\u53d6\u51fa\u4ee3\u7801\u5e93\u7684\u540d\u79f0repo_name\uff0c\u5e76\u4ece\u4e2d\u79fb\u9664.git\u540e\u7f00\u3002\n",
+        "    repo_name = url.split(\"/\")[-1].replace(\".git\", \"\")\n",
+        "\n",
+        "    # \u6784\u5efa\u4ee3\u7801\u5e93\u5728\u672c\u5730\u7684\u8def\u5f84repo_path\uff0c\u8be5\u8def\u5f84\u4e3aext_dir\u4e0erepo_name\u7684\u7ec4\u5408\u3002\n",
+        "    repo_path = os.path.join(ext_dir, repo_name)\n",
+        "\n",
+        "    # \u5982\u679crepo_path\u6240\u4ee3\u8868\u7684\u76ee\u5f55\u4e0d\u5b58\u5728\uff0c\u5219\u6267\u884c\u4ee5\u4e0b\u64cd\u4f5c\uff1a\n",
+        "    if not os.path.exists(repo_path):\n",
+        "\n",
+        "        # \u5982\u679creinstall\u53c2\u6570\u7684\u503c\u4e3aTrue\u6216repo_path\u6240\u4ee3\u8868\u7684\u76ee\u5f55\u5b58\u5728\uff0c\u5219\u5220\u9664\u8be5\u76ee\u5f55\uff08\u4f7f\u7528shutil.rmtree\u51fd\u6570\u5b9e\u73b0\uff09\u3002\n",
+        "        if reinstall or os.path.exists(repo_path):\n",
+        "            print(\"\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u6b63\u5728\u5220\u9664\u5b83...\")\n",
+        "            shutil.rmtree(repo_path)\n",
+        "\n",
+        "        # \u8c03\u7528shallow_clone_repo\u51fd\u6570\u6765\u4f7f\u7528\u6d45\u514b\u9686\u7684\u65b9\u5f0f\u5c06Git\u4ed3\u5e93\u514b\u9686\u5230\u672c\u5730\uff08\u8be5\u51fd\u6570\u7684\u5b9e\u73b0\u4e0d\u5728\u8be5\u4ee3\u7801\u6bb5\u4e2d\uff09\u3002\n",
         "        shallow_clone_repo(url, ext_dir)\n",
+        "\n",
+        "    # \u5982\u679crepo_path\u6240\u4ee3\u8868\u7684\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5219\u6839\u636ereinstall\u53c2\u6570\u7684\u503c\u51b3\u5b9a\u662f\u5426\u91cd\u65b0\u5b89\u88c5\u4ee3\u7801\u5e93\uff0c\u6216\u4f7f\u7528git pull\u66f4\u65b0\u4ee3\u7801\u3002\n",
         "    else:\n",
-        "        print(\"Directory already exists, skipping cloning\")\n"
+        "        if reinstall:\n",
+        "            print(\"\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u6b63\u5728\u91cd\u65b0\u5b89\u88c5...\")\n",
+        "            shutil.rmtree(repo_path)\n",
+        "            shallow_clone_repo(url, ext_dir)\n",
+        "        else:\n",
+        "            print(\"\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5c1d\u8bd5\u4f7f\u7528git pull\u66f4\u65b0\u4ee3\u7801...\")\n",
+        "            try:\n",
+        "                # \u8fdb\u5165\u4ee3\u7801\u5e93\u76ee\u5f55\u5e76\u6267\u884cgit pull\u547d\u4ee4\n",
+        "                os.chdir(repo_path)\n",
+        "                subprocess.check_output(['git', 'pull'])\n",
+        "                print(\"\u4ee3\u7801\u66f4\u65b0\u6210\u529f\u3002\")\n",
+        "            except subprocess.CalledProcessError as e:\n",
+        "                # \u5982\u679cgit pull\u5931\u8d25\uff0c\u5219\u8f93\u51fa\u9519\u8bef\u4fe1\u606f\n",
+        "                print(\"\u4ee3\u7801\u66f4\u65b0\u5931\u8d25\uff0c\u9519\u8bef\u4fe1\u606f\u5982\u4e0b\uff1a\")\n",
+        "                print(e.output.decode(\"utf-8\"))\n"
       ]
     },
     {
