--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1277,6 +1277,26 @@
     },
     {
       "cell_type": "markdown",
+      "id": "e36896af-a7e6-4595-822a-24436ea59c7c",
+      "metadata": {},
+      "source": [
+        "## \u6302\u8f7dTI\u00b7Embedding"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "8f2e7565-410e-4633-9078-ef933f7b92d2",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "check_model_and_make_symbollink('bad_prompt_version2.pt','./embeddings',copy_or_mount)\n",
+        "check_model_and_make_symbollink('EasyNegative.safetensors','./embeddings',copy_or_mount)\n",
+        "check_model_and_make_symbollink('ng_deepnegative_v1_75t.pt','./embeddings',copy_or_mount)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "9ecb312a-5acf-452b-afb9-17268532a5b2",
       "metadata": {},
       "source": [
@@ -1312,9 +1332,61 @@
         "                return\n",
         "        print('\u672a\u627e\u5230\u7f29\u7565\u56fe')\n",
         "\n",
+        "def create_inputLoRA_symbolic_link(source_dir, target_dir):\n",
+        "    source_path = '/input/input4'\n",
+        "    symlink_path = os.path.dirname(os.path.abspath(target_dir))\n",
+        "    symlink_name = os.path.basename(target_dir)\n",
+        "    print(source_path)\n",
+        "    create_symlink(source_path, symlink_path, symlink_name)\n",
+        "\n",
+        "def find_target_dir(target_file_name):\n",
+        "    if env_name == 'AutoDL':\n",
+        "        pre_nas_list = [\n",
+        "            '/root/autodl-nas',\n",
+        "            '/root/autodl-fs',\n",
+        "            # '/root/autodl-pub',\n",
+        "            ]\n",
+        "        \n",
+        "        nas_list = []\n",
+        "        \n",
+        "        for n in pre_nas_list:\n",
+        "            if os.path.exists(n):\n",
+        "                nas_list.append(n)\n",
+        "        # print(nas_list)\n",
+        "        \n",
+        "        for i in nas_list:  \n",
+        "            file_list = find_file(f'{i}', target_file_name)\n",
+        "            if file_list:\n",
+        "                break\n",
+        "            else:\n",
+        "                continue\n",
+        "    elif env_name == 'OpenBayes':\n",
+        "        for i in range(0, 5):  # \u5728input\u4e2d\u8fdb\u884c\u641c\u7d22\n",
+        "            file_list = find_file(f'/input{i}', target_file_name)\n",
+        "            if file_list:\n",
+        "                break\n",
+        "            else:\n",
+        "                continue\n",
+        "    \n",
+        "    if file_list:\n",
+        "        print(file_list)\n",
+        "        return file_list\n",
+        "    else:\n",
+        "        print(\"\u672a\u627e\u5230\u76ee\u6807\u6587\u4ef6\uff0c\u8bf7\u786e\u8ba4\u6587\u4ef6\u540d\u662f\u5426\u6b63\u786e\u3002\")\n",
+        "        return None\n",
+        "\n",
+        "source_file_name = 'Please put your LoRA models here.txt'\n",
+        "file_list = find_target_dir(source_file_name)\n",
+        "source_file_dist = file_list[0]\n",
+        "source_dir = os.path.dirname(source_file_dist)\n",
+        "\n",
+        "print(target_file_dir)\n",
         "        \n",
         "SD_orig_Lora_dir = './models/Lora'\n",
         "Additional_Networks_Lora_dir = './extensions/sd-webui-additional-networks/models/lora'\n",
+        "\n",
+        "# for i in [SD_orig_Lora_dir,Additional_Networks_Lora_dir]:\n",
+        "#     create_inputLoRA_symbolic_link(source_dir, i)\n",
         "\n",
         "for i in [SD_orig_Lora_dir,Additional_Networks_Lora_dir]:\n",
         "    # \u9e1f\u5c71\u660e\u98ce\u683c\n",
@@ -1346,7 +1418,9 @@
         "    # \u58a8\u5fc3\u98ce\u683c https://civitai.com/models/12597/moxin\n",
         "    create_model_with_thumbnail('Moxin_10.safetensors',i,copy_or_mount)\n",
         "    # \u89d2\u8272\u591a\u89c6\u89d2\u56fe https://civitai.com/models/7252/charturnerbeta-lora-experimental\n",
-        "    create_model_with_thumbnail('charturnerbetaLora_charturnbetalora.safetensors',i,copy_or_mount)"
+        "    create_model_with_thumbnail('charturnerbetaLora_charturnbetalora.safetensors',i,copy_or_mount)\n",
+        "    # \u7ebf\u7a3f\n",
+        "    create_model_with_thumbnail('animeLineartStyle_v20Offset.safetensors',i,copy_or_mount)"
       ]
     },
     {
@@ -2040,6 +2114,14 @@
         "\n",
         "!$cmd"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "3d6ea0e0-9514-4f4a-8bd1-5afc5c6ad812",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
