improve create_symlink

--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -1068,24 +1068,36 @@
         "import os\n",
         "import hashlib\n",
         "from func.checksum import generate_checksum,find_folder\n",
+        "import shutil\n",
         "\n",
-        "def create_symlink(source_path, symlink_path, symlink_name):\n",
+        "def create_symlink(source_path, symlink_path, symlink_name=None):\n",
+        "    # \u5982\u679c\u6ca1\u6709\u6307\u5b9asymlink_name\uff0c\u5219\u81ea\u52a8\u6c42\u89e3\n",
+        "    if not symlink_name:\n",
+        "        symlink_name = os.path.basename(symlink_path)\n",
+        "        symlink_path = os.path.dirname(symlink_path)\n",
+        "\n",
         "    # \u5c06\u8f6f\u94fe\u63a5\u8def\u5f84\u62fc\u63a5\u6210\u5b8c\u6574\u7684\u6587\u4ef6\u8def\u5f84\n",
-        "    symlink_file = f\"{symlink_path}/{symlink_name}\"\n",
+        "    symlink_file = os.path.join(symlink_path, symlink_name)\n",
         "\n",
         "    # \u5982\u679c\u8f6f\u94fe\u63a5\u6587\u4ef6\u5b58\u5728\uff0c\u5219\u5148\u5220\u9664\u5b83\n",
         "    if os.path.exists(symlink_file):\n",
-        "        os.remove(symlink_file)\n",
+        "        if os.path.islink(symlink_file):\n",
+        "            os.unlink(symlink_file)\n",
+        "        else:\n",
+        "            if os.path.isdir(symlink_file):\n",
+        "                shutil.rmtree(symlink_file)\n",
+        "            else:\n",
+        "                os.remove(symlink_file)\n",
         "\n",
         "    # \u521b\u5efa\u8f6f\u94fe\u63a5\n",
         "    os.symlink(source_path, symlink_file)\n",
         "\n",
         "    # \u9a8c\u8bc1\u8f6f\u94fe\u63a5\u662f\u5426\u6210\u529f\u521b\u5efa\n",
         "    if os.path.islink(symlink_file):\n",
-        "        # print(f\"{symlink_file} \u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
         "        print(f\"\\033[1m\\033[92m{symlink_file}\\033[0m \u279c \\033[34m{os.readlink(symlink_file)}\\033[0m\")\n",
         "    else:\n",
         "        print(f\"{symlink_file} \u4e0d\u662f\u4e00\u4e2a\u7b26\u53f7\u94fe\u63a5\u3002\")\n",
+        "\n",
         "\n",
         "def find_file(root_dir, target_name):\n",
         "    paths = []\n",
@@ -1388,7 +1400,12 @@
         "# for i in [SD_orig_Lora_dir,Additional_Networks_Lora_dir]:\n",
         "#     create_inputLoRA_symbolic_link(source_dir, i)\n",
         "\n",
-        "for i in [SD_orig_Lora_dir,Additional_Networks_Lora_dir]:\n",
+        "create_symlink(\n",
+        "    source_path = os.path.abspath(os.path.join(webUIDir,SD_orig_Lora_dir)),\n",
+        "    symlink_path = os.path.abspath(os.path.join(webUIDir,Additional_Networks_Lora_dir)),\n",
+        ")\n",
+        "\n",
+        "for i in [SD_orig_Lora_dir]:\n",
         "    # \u9e1f\u5c71\u660e\u98ce\u683c\n",
         "    create_model_with_thumbnail('Akira Toriyama.safetensors',i,copy_or_mount)\n",
         "    # \u7535\u952f\u4eba \u739b\u5947\u739b\n",
