--- a/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
+++ b/ipynb/OneClick-stable-diffusion-for-Openbayes.ipynb
@@ -254,8 +254,8 @@
         "#     sp = setProxy()\n",
         "#     proxy = sp['proxy']\n",
         "#     region = sp['region']\n",
-        "\n",
-        "# doProxy()"
+        "doProxy(force=True)\n",
+        "print(proxy)"
       ]
     },
     {
@@ -808,6 +808,9 @@
       },
       "outputs": [],
       "source": [
+        "%cd $repo_root_dir\n",
+        "%run ./nbfunc/hub.ipynb\n",
+        "\n",
         "extURL='https://github.com/dtlnor/stable-diffusion-webui-localization-zh_CN'\n",
         "shallow_clone_ext_repo(extURL)"
       ]
@@ -1391,8 +1394,6 @@
         "file_list = find_target_dir(source_file_name)\n",
         "source_file_dist = file_list[0]\n",
         "source_dir = os.path.dirname(source_file_dist)\n",
-        "\n",
-        "print(target_file_dir)\n",
         "        \n",
         "SD_orig_Lora_dir = './models/Lora'\n",
         "Additional_Networks_Lora_dir = './extensions/sd-webui-additional-networks/models/lora'\n",
@@ -2051,6 +2052,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "proxy = 'export http_proxy=https://127.0.0.1:7779 && export https_proxy=https://127.0.0.1:7779'\n",
+        "\n",
+        "base_args = [\n",
+        "    'source activate','&&',\n",
+        "    f'conda activate {custom_env_dir}','&&',\n",
+        "    proxy,'&&'\n",
+        "       ]\n",
+        "\n",
         "from func.env import setProxy,getWebUIDir,getExtDir,findDir,findFile,getDirSize,styleURL,getArch\n",
         "import ipywidgets as widgets\n",
         "from subprocess import getoutput\n",
@@ -2131,14 +2140,6 @@
         "\n",
         "!$cmd"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "3d6ea0e0-9514-4f4a-8bd1-5afc5c6ad812",
-      "metadata": {},
-      "outputs": [],
-      "source": []
     }
   ],
   "metadata": {
