--- a/nbfunc/installer.ipynb
+++ b/nbfunc/installer.ipynb
@@ -17,6 +17,11 @@
       "source": [
         "import os\n",
         "\n",
+        "if 'proxy' in globals():\n",
+        "    print('proxy\u5728globals')\n",
+        "else:\n",
+        "    print('proxy\u4e0d\u5728globals')\n",
+        "\n",
         "def clone_repo(url, directory):\n",
         "    repo_name = url.split(\"/\")[-1].replace(\".git\", \"\")\n",
         "    repo_path = os.path.join(directory, repo_name)\n",
@@ -24,7 +29,11 @@
         "        print(f\"Repository {url} already exists in {directory}\")\n",
         "        return\n",
         "    try:\n",
-        "        !git clone {url} {repo_path}\n",
+        "        # \u5982\u679cproxy\u53d8\u91cf\u5b58\u5728\uff0c\u5219\u4f7f\u7528proxy\u4f5c\u4e3a\u547d\u4ee4\u524d\u7f00\n",
+        "        if 'proxy' in globals():\n",
+        "            !$proxy && git clone {url} {repo_path}\n",
+        "        else:\n",
+        "            !git clone {url} {repo_path}\n",
         "        print(f\"Repository {url} cloned to {repo_path}\")\n",
         "    except Exception as e:\n",
         "        print(e)\n",
@@ -34,7 +43,11 @@
         "    repo_name = url.split(\"/\")[-1].replace(\".git\", \"\")\n",
         "    repo_path = os.path.join(directory, repo_name)\n",
         "    try:\n",
-        "        !pip install $repo_path\n",
+        "        # \u5982\u679cproxy\u53d8\u91cf\u5b58\u5728\uff0c\u5219\u4f7f\u7528proxy\u4f5c\u4e3a\u547d\u4ee4\u524d\u7f00\n",
+        "        if 'proxy' in globals():\n",
+        "            !$proxy && pip install {repo_path}\n",
+        "        else:\n",
+        "            !pip install {repo_path}\n",
         "        print(f\"Repository {url} installed to {repo_path}\")\n",
         "    except Exception as e:\n",
         "        print(e)\n",
@@ -46,7 +59,11 @@
         "        print(f\"Repository {url} already exists in {directory}\")\n",
         "        return\n",
         "    try:\n",
-        "        !git clone --depth 1 {url} {repo_path}\n",
+        "        # \u5982\u679cproxy\u53d8\u91cf\u5b58\u5728\uff0c\u5219\u4f7f\u7528proxy\u4f5c\u4e3a\u547d\u4ee4\u524d\u7f00\n",
+        "        if 'proxy' in globals():\n",
+        "            !$proxy && git clone --depth 1 {url} {repo_path}\n",
+        "        else:\n",
+        "            !git clone --depth 1 {url} {repo_path}\n",
         "        print(f\"Repository {url} cloned to {repo_path}\")\n",
         "    except Exception as e:\n",
         "        print(e)\n",
@@ -56,7 +73,11 @@
         "    repo_name = url.split(\"/\")[-1].replace(\".git\", \"\")\n",
         "    repo_path = os.path.join(directory, repo_name)\n",
         "    try:\n",
-        "        !pip install $repo_path\n",
+        "        # \u5982\u679cproxy\u53d8\u91cf\u5b58\u5728\uff0c\u5219\u4f7f\u7528proxy\u4f5c\u4e3a\u547d\u4ee4\u524d\u7f00\n",
+        "        if 'proxy' in globals():\n",
+        "            !$proxy && pip install {repo_path}\n",
+        "        else:\n",
+        "            !pip install {repo_path}\n",
         "        print(f\"Repository {url} installed to {repo_path}\")\n",
         "    except Exception as e:\n",
         "        print(e)\n",
@@ -104,14 +125,17 @@
         "        else:\n",
         "            print(\"\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5c1d\u8bd5\u4f7f\u7528git pull\u66f4\u65b0\u4ee3\u7801...\")\n",
         "            try:\n",
-        "                # \u8fdb\u5165\u4ee3\u7801\u5e93\u76ee\u5f55\u5e76\u6267\u884cgit pull\u547d\u4ee4\n",
-        "                os.chdir(repo_path)\n",
-        "                subprocess.check_output(['git', 'pull'])\n",
+        "                # \u5982\u679cproxy\u53d8\u91cf\u5b58\u5728\uff0c\u5219\u4f7f\u7528proxy\u4f5c\u4e3a\u547d\u4ee4\u524d\u7f00\n",
+        "                if 'proxy' in globals():\n",
+        "                    !$proxy && cd {repo_path} && git pull\n",
+        "                else:\n",
+        "                    !cd {repo_path} && git pull\n",
+        "\n",
         "                print(\"\u4ee3\u7801\u66f4\u65b0\u6210\u529f\u3002\")\n",
-        "            except subprocess.CalledProcessError as e:\n",
+        "            except:\n",
         "                # \u5982\u679cgit pull\u5931\u8d25\uff0c\u5219\u8f93\u51fa\u9519\u8bef\u4fe1\u606f\n",
         "                print(\"\u4ee3\u7801\u66f4\u65b0\u5931\u8d25\uff0c\u9519\u8bef\u4fe1\u606f\u5982\u4e0b\uff1a\")\n",
-        "                print(e.output.decode(\"utf-8\"))\n",
+        "                print(sys.exc_info()[0])\n",
         "\n",
         "    \n",
         "def shallow_clone_ext_repo(url, reinstall=False):\n",
@@ -155,9 +179,12 @@
         "        else:\n",
         "            print(\"\u76ee\u5f55\u5df2\u7ecf\u5b58\u5728\uff0c\u5c1d\u8bd5\u4f7f\u7528git pull\u66f4\u65b0\u4ee3\u7801...\")\n",
         "            try:\n",
-        "                # \u8fdb\u5165\u4ee3\u7801\u5e93\u76ee\u5f55\u5e76\u6267\u884cgit pull\u547d\u4ee4\n",
-        "                os.chdir(repo_path)\n",
-        "                subprocess.check_output(['git', 'pull'])\n",
+        "                # \u5982\u679cproxy\u53d8\u91cf\u5b58\u5728\uff0c\u5219\u4f7f\u7528proxy\u4f5c\u4e3a\u547d\u4ee4\u524d\u7f00\n",
+        "                if 'proxy' in globals():\n",
+        "                    !$proxy && cd {repo_path} && git pull\n",
+        "                else:\n",
+        "                    !cd {repo_path} && git pull\n",
+        "\n",
         "                print(\"\u4ee3\u7801\u66f4\u65b0\u6210\u529f\u3002\")\n",
         "            except subprocess.CalledProcessError as e:\n",
         "                # \u5982\u679cgit pull\u5931\u8d25\uff0c\u5219\u8f93\u51fa\u9519\u8bef\u4fe1\u606f\n",
