--- a/nbfunc/proxy.ipynb
+++ b/nbfunc/proxy.ipynb
@@ -188,6 +188,7 @@
         "\n",
         "if env_name == 'AutoDL':\n",
         "    ipDict = [\n",
+        "        {'region': '\u81ea\u4f9b', 'ip': '127.0.0.1', 'port': '7779'},\n",
         "        {'region': '\u829c\u6e56', 'ip': '192.168.0.91', 'port': '12798'},\n",
         "        {'region': '\u5317\u4eac', 'ip': '100.72.64.19', 'port': '12798'},\n",
         "        {'region': '\u5185\u8499', 'ip': '192.168.1.174', 'port': '12798'},\n",
@@ -198,6 +199,7 @@
         "    ] + ipDict\n",
         "elif env_name == 'OpenBayes':\n",
         "    ipDict = [\n",
+        "        {'region': '\u81ea\u4f9b', 'ip': '127.0.0.1', 'port': '7779'},\n",
         "        {'region': '\u8d1d\u5f0f', 'ip': 'alchemist-experience', 'port': '7890'},\n",
         "    ] + ipDict\n",
         "\n",
@@ -327,14 +329,19 @@
         "\n",
         "    return({'region': region, 'proxy': proxy, 'proxyURL': proxyURL})\n",
         "\n",
-        "def doProxy():\n",
+        "def doProxy(force=False):\n",
         "    global proxy,region\n",
-        "    try:\n",
-        "        proxy,region\n",
-        "    except NameError:\n",
+        "    if force:\n",
         "        sp = setProxy()\n",
         "        proxy = sp['proxy']\n",
-        "        region = sp['region']"
+        "        region = sp['region']\n",
+        "    else:\n",
+        "        try:\n",
+        "            proxy,region\n",
+        "        except NameError:\n",
+        "            sp = setProxy()\n",
+        "            proxy = sp['proxy']\n",
+        "            region = sp['region']"
       ]
     }
   ],
@@ -354,7 +361,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.8.15"
     }
   },
   "nbformat": 4,
