--- a/nbfunc/proxy.ipynb
+++ b/nbfunc/proxy.ipynb
@@ -188,7 +188,7 @@
         "\n",
         "if env_name == 'AutoDL':\n",
         "    ipDict = [\n",
-        "        {'region': '\u81ea\u4f9b', 'ip': '127.0.0.1', 'port': '7779'},\n",
+        "        {'region': '\u81ea\u4f9b', 'ip': 'localhost', 'port': '7779'},\n",
         "        {'region': '\u829c\u6e56', 'ip': '192.168.0.91', 'port': '12798'},\n",
         "        {'region': '\u5317\u4eac', 'ip': '100.72.64.19', 'port': '12798'},\n",
         "        {'region': '\u5185\u8499', 'ip': '192.168.1.174', 'port': '12798'},\n",
@@ -199,7 +199,7 @@
         "    ] + ipDict\n",
         "elif env_name == 'OpenBayes':\n",
         "    ipDict = [\n",
-        "        {'region': '\u81ea\u4f9b', 'ip': '127.0.0.1', 'port': '7779'},\n",
+        "        {'region': '\u81ea\u4f9b', 'ip': 'localhost', 'port': '7779'},\n",
         "        {'region': '\u8d1d\u5f0f', 'ip': 'alchemist-experience', 'port': '7890'},\n",
         "    ] + ipDict\n",
         "\n",
