--- a/tools/proxy_tools/clash_install_and_setup.ipynb
+++ b/tools/proxy_tools/clash_install_and_setup.ipynb
@@ -167,7 +167,7 @@
         "    'port': 7777,\n",
         "    'socks-port': 7778,\n",
         "    'mixed-port': 7779,\n",
-        "    'mode':'Global'\n",
+        "    # 'mode':'Global'\n",
         "}\n",
         "    \n",
         "clash_version = \"v1.13.0\"\n",
